Fixed sliders on small screens

--- a/css/legacy20.css
+++ b/css/legacy20.css
@@ -9,8 +9,7 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: #fff;
-    width: 100vw;
+    overflow-x: hidden;
 }
 
 /*Styles for header elements*/
@@ -27,7 +26,7 @@ body {
 }
 
 /*Cover*/
-.cover{
+.cover {
     background-color: #000;
     height: 70vh;
     width: 100vw;
@@ -37,10 +36,10 @@ body {
     align-items: center;
 }
 
-.cover .cover-logo img{
+.cover .cover-logo img {
     width: 50%;
 }
-.cover-logo{
+.cover-logo {
     display: flex;
     justify-content: space-evenly;
 }
@@ -61,7 +60,12 @@ body {
 /*style heading*/
 .heading {
     margin-bottom: 50px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.heading .title{
+    color: #ffd401;
 }
 
 h1 {
@@ -69,7 +73,6 @@ h1 {
     font-weight: 900;
     font-size: 2.6em;
     font-family: "Gemunu Libre", sans-serif;
-    color: #ffd401;
     text-transform: uppercase;
 }
 
@@ -249,7 +252,6 @@ h1 {
     padding: 0 2%;
 }
 
-
 .timeline-container .content .btn {
     margin: 0;
     font-size: 15px;
@@ -282,56 +284,55 @@ h1 {
 }
 
 /*Slider*/
-.slider-item{
+.slider-item {
     display: none;
 }
 
-.slider-active{
-    display:block;
+.slider-active {
+    display: block;
 }
 
-.slides{
-    width: 1365px;
-    height: 1365px;
+.slides {
+    width: 70vw;
+    height: 55vw;
     margin: 0 auto;
     max-width: 75vw;
     max-height: 75vh;
-    background-size: 75vw 75vh;
-    display:flex;
+    background-size: 75vw 55vw;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#recruitment-slider{
-    background-image: url('../img/recruitment/img1.jpg');
+#recruitment-slider {
+    background-image: url("../img/recruitment/img1.jpg");
 }
 
-
-#orientation-slider{
-    background-image: url('../img/orientation/img1.jpg');
+#orientation-slider {
+    background-image: url("../img/orientation/img1.jpg");
 }
 
-#ecu-slider{
-    background-image: url('../img/ecu/img1.jpg');
+#ecu-slider {
+    background-image: url("../img/ecu/img1.jpg");
 }
 
-#general-slider{
-    background-image: url('../img/general/img1.jpg');
+#general-slider {
+    background-image: url("../img/general/img1.jpg");
 }
 
-#spark-slider{
-    background-image: url('../img/spark/img1.jpg');
+#spark-slider {
+    background-image: url("../img/spark/img1.jpg");
 }
 
-#first-step-slider{
-    background-image: url('../img/first-step/img1.jpg');
+#first-step-slider {
+    background-image: url("../img/first-step/img1.jpg");
 }
 
-#closing-slider{
-    background-image: url('../img/closing/img1.jpg');
+#closing-slider {
+    background-image: url("../img/closing/img1.jpg");
 }
 
-.slider-button{
+.slider-button {
     height: 5vh;
     width: 50px;
     background-color: #000;
@@ -341,13 +342,12 @@ h1 {
     position: relative;
 }
 
-
 /*Media Query*/
-@media only screen and (max-width: 875px){
-    .cover .cover-logo img{
+@media only screen and (max-width: 875px) {
+    .cover .cover-logo img {
         width: 30%;
     }
-    .cover-logo{
+    .cover-logo {
         display: flex;
         justify-content: space-evenly;
     }
@@ -413,19 +413,19 @@ h1 {
     }
 }
 
-@media only screen and (max-width: 460px){
-    .timeline-container .content h2{
-        font-size: 1.5em
+@media only screen and (max-width: 460px) {
+    .timeline-container .content h2 {
+        font-size: 1.5em;
     }
-    .timeline-container .content .btn{
+    .timeline-container .content .btn {
         width: 30px;
         height: 30px;
         text-align: center;
     }
-    .cover h1{
+    .cover h1 {
         font-size: 1.5em;
     }
-    .cover{
+    .cover {
         height: 50vw;
     }
 }
@@ -438,7 +438,7 @@ h1 {
     .title {
         font-size: 1.5em;
     }
-    .timeline-container .content h2{
+    .timeline-container .content h2 {
         font-size: 1em;
     }
     .timeline-container {
@@ -453,13 +453,8 @@ h1 {
     }
 }
 
-@media only screen and (max-width: 300px){
-    .cover h1{
+@media only screen and (max-width: 300px) {
+    .cover h1 {
         font-size: 1.25em;
     }
 }
-
-
-
-
-
